--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <!-- <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="feature.html" class="nav-item nav-link">Feature</a>
                     <a href="team.html" class="nav-item nav-link">Chef</a>
                     <a href="menu.html" class="nav-item nav-link">Menu</a>
@@ -50,7 +50,7 @@
                             <a href="single.html" class="dropdown-item">Blog Detail</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                 </div>
             </div>
         </div>
@@ -219,7 +219,7 @@
                             <p>
                                 At <a href="/">Pathanjali Export And Import</a> , we believe in the importance of quality ingredients that enrich the culinary experience. Our commitment to excellence extends from sourcing the finest produce to ensuring meticulous processing and packaging standards. Each product in our range is carefully selected and handled with utmost care to preserve its natural goodness and taste.
                             </p>
-                            <a class="btn custom-btn" href="about.html">Read More</a>
+                            <a class="btn custom-btn disabled" href="about.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -430,7 +430,7 @@
                         <p>
                             Our dedicated customer support team is available to assist you with any inquiries, orders, or concerns you may have. 
                         </p>
-                        <a href="about.html">Read More</a>
+                        <a href="/ " class=" ">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -440,7 +440,7 @@
                         <p>
                             For businesses or special occasions, we offer customized order options to meet your specific requirements and preferences.
                         </p>
-                        <a href="about.html">Read More</a>
+                        <a href="/" class=" ">Read More</a>
 
                     </div>
                 </div>
@@ -451,7 +451,7 @@
                         <p>
                             We ensure timely delivery of your orders, maintaining the freshness and quality of our products every step of the way.
                         </p>
-                        <a href="about.html">Read More</a>
+                        <a href="/" class=" ">Read More</a>
 
                     </div>
                 </div>
@@ -573,9 +573,9 @@
                             <div class="footer-link">
                                 <h2>Quick Links</h2>
                                 <a href="/">Home</a>
-                                <a href="about.html">About</a>
+                                <a href="/">About</a>
                                 <a href="">Products</a>
-                                <a href="contact.html">Contact</a>                                
+                                <a href="/">Contact</a>                                
                             </div>
                         </div>
                     </div>
