--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Burger King - Food Website Template</title>
+    <title>Pathanjali Export And Import</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
@@ -38,19 +38,17 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <!-- <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="feature.html" class="nav-item nav-link">Feature</a>
-                    <a href="team.html" class="nav-item nav-link">Chef</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu</a>
-                    <a href="booking.html" class="nav-item nav-link">Booking</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="single.html" class="dropdown-item">Blog Detail</a>
+                            <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
+                            <a href="rice.html" class="dropdown-item">Rice</a>
+                            <a href="urad.html" class="dropdown-item">Urad dal Black</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a> -->
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -362,31 +360,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <!-- <p>
-                                Choose <a href="/">Pathanjali Export And Import</a> for a culinary journey that combines quality, reliability, and passion for exceptional food products. Join countless satisfied customers who trust us for their everyday cooking and special occasions.
-                            </p> -->
-                        </div>
-                        <!-- <div class="col-sm-12">
-                            <div class="feature-item">
-                                <i class="flaticon-medal"></i>
-                                <h3>Commitment to Freshness:</h3>
-                                <p>
-                                    Our products are known for their freshness and exceptional taste, ensuring every meal you prepare is a delight.
-                                </p>
-                            </div>
-                        </div> -->
-                        <!-- <div class="col-sm-6">
-                            <div class="feature-item">
-                                <i class="flaticon-meat"></i>
-                                <h3>Customer Satisfaction:</h3>
-                                <p>
-                                    We prioritize your satisfaction above all else. Our dedicated team is committed to providing prompt service and addressing your needs with professionalism.
-                                </p>
-                            </div>
-                        </div> -->
-                    </div>
+                    
                     <!-- <div class="row">
                         <div class="col-sm-6">
                             <div class="feature-item">
