--- a/basmati.html
+++ b/basmati.html
@@ -59,14 +59,10 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
-                            <a href="rice.html" class="dropdown-item " id="hov"> Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Non Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Ponni Rice</a>
+                            <a href="basmati.html" class="dropdown-item">Basmati Rice</a>
+                            <a href="non-basmati.html" class="dropdown-item">Non Basmati Rice</a>
+                            <a href="ponni.html" class="dropdown-item">Ponni Rice</a>
                             <a href="urad.html" class="dropdown-item">Urad dal Black</a>
-                            <a href="urad.html" class="dropdown-item">Dal Chana</a>
-                            <a href="urad.html" class="dropdown-item">Moth Dal</a>
-                            <a href="urad.html" class="dropdown-item">Urad Dal</a>
-                            <a href="urad.html" class="dropdown-item">Moong Dal</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -84,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-capitalize">
-                    <h2>Ponni rice</h2>
+                    <h2>Basmati Rice</h2>
                 </div>
 
             </div>
@@ -96,24 +92,24 @@
     <div class="container">
         <div class="row text-capitalize">
             <div class="col-lg-6 my-3">
-                <img src="image/Ponni rice.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
-                <h3 class="mt-3  text-warning">Nutritional Benefits: </h3>
+                <img src="image/basmati.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
+                <h3 class="mt-3  text-warning">Health Benefits:</h3>
                 <ul class=" ">
-                    <li class="my-3"><b>Energy Source:</b> Ponni rice provides a good source of carbohydrates, offering sustained energy for daily activities.</li>
-                    <li class="my-3"><b>Nutrient-Rich:</b> It contains essential vitamins and minerals, including B vitamins, iron, and magnesium, contributing to a balanced diet.</li>
-                    <li class="my-3"><b>Digestive Health:</b> The fiber content in Ponni rice can aid in digestion and promote a healthy digestive system.</li>
+                    <li class="my-3"><b>Aromatic Flavor:</b> Basmati rice is renowned for its unique, nutty aroma and delicate flavor. This makes it a favorite choice for various dishes, enhancing both the taste and overall dining experience.</li>
+                    <li class="my-3"><b>Nutritious Profile:</b> Basmati rice is a good source of essential nutrients. It provides a steady supply of energy through its carbohydrate content and contains important vitamins and minerals such as Vitamin B, iron, and magnesium.</li>
+                    <li class="my-3"><b>Easy to Cook:</b> Basmati rice is relatively easy to prepare. With proper rinsing and soaking, it cooks evenly and maintains its distinct texture, making it a convenient choice for both novice and experienced cooks.</li>
                 </ul>
                 <a href="" class="btn btn-dark w-100 mt-3">Send Enquiry</a>
             </div>
             <div class="col-lg-6 my-3">
                 <h3 class="text-warning">Characteristics:</h3>
-                <p>Ponni rice is a premium variety of rice that is highly valued for its unique texture, flavor, and nutritional benefits. Originating from the fertile regions of South India, Ponni rice is renowned for its adaptability in diverse culinary applications and its ability to complement a wide range of dishes.</p>
+                <p>Basmati rice, renowned for its exceptional quality and aromatic characteristics, is a premium long-grain rice variety celebrated for its delicate flavor and fluffy texture. Originating from the Indian subcontinent, Basmati rice has become a global favorite, enhancing a diverse array of dishes with its unique qualities.</p>
                 <hr>
-                <h4>Why Choose Our Non-Basmati Rice?</h4>
+
                 <ul>
-                    <li class="mt-2"><b>Appearance:</b> Ponni rice is medium-grain rice with a slender, slightly oval shape. It is known for its firm, non-sticky texture when cooked, making it an excellent choice for various dishes.</li>
-                    <li class="mt-2"><b>Texture:</b> When cooked, Ponni rice grains remain separate and fluffy, with a pleasant bite that enhances the overall eating experience. Its non-sticky quality ensures that the grains do not clump together, making it ideal for dishes where distinct rice grains are desired.</li>
-                    <li class="mt-2"><b>Flavor:</b> Ponni rice has a mild, neutral flavor that complements a wide array of ingredients and seasonings, making it a versatile choice for everyday meals and special occasions.</li>
+                    <li class="mt-2">  <b>Appearance: </b> Basmati rice grains are long, slender, and slightly pointed. When cooked, the grains become separate, fluffy, and non-sticky, making it ideal for a variety of dishes.</li>
+                    <li class="mt-2"><b>Aroma: </b>One of the defining features of Basmati rice is its distinctive, fragrant aroma. This natural scent, often described as nutty or floral, adds an extra layer of sensory enjoyment to meals.</li>
+                    <li class="mt-2"><b>Texture:</b> The rice cooks to a light, airy texture, making it a perfect complement to both rich and delicate dishes.</li>
                 </ul>
             </div>
         </div>
