--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,9 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
-                            <a href="rice.html" class="dropdown-item">Rice</a>
+                            <a href="basmati.html" class="dropdown-item">Basmati Rice</a>
+                            <a href="non-basmati.html" class="dropdown-item">Non Basmati Rice</a>
+                            <a href="ponni.html" class="dropdown-item">Ponni Rice</a>
                             <a href="urad.html" class="dropdown-item">Urad dal Black</a>
                         </div>
                     </div>
