--- a/ponni.html
+++ b/ponni.html
@@ -54,19 +54,14 @@
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
                     <a href="about.html" class="nav-item nav-link ">About</a>
-
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
-                            <a href="rice.html" class="dropdown-item " id="hov"> Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Non Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Ponni Rice</a>
+                            <a href="basmati.html" class="dropdown-item">Basmati Rice</a>
+                            <a href="non-basmati.html" class="dropdown-item">Non Basmati Rice</a>
+                            <a href="ponni.html" class="dropdown-item">Ponni Rice</a>
                             <a href="urad.html" class="dropdown-item">Urad dal Black</a>
-                            <a href="urad.html" class="dropdown-item">Dal Chana</a>
-                            <a href="urad.html" class="dropdown-item">Moth Dal</a>
-                            <a href="urad.html" class="dropdown-item">Urad Dal</a>
-                            <a href="urad.html" class="dropdown-item">Moong Dal</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -84,7 +79,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-capitalize">
-                    <h2>Non Basmati Rice</h2>
+                    <h2>Ponni rice</h2>
                 </div>
 
             </div>
@@ -96,30 +91,24 @@
     <div class="container">
         <div class="row text-capitalize">
             <div class="col-lg-6 my-3">
-                <img src="image/non basmati.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
+                <img src="image/Ponni rice.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
                 <h3 class="mt-3  text-warning">Nutritional Benefits: </h3>
                 <ul class=" ">
-                    <li class="my-3"><b>Carbohydrates:</b> Non-Basmati rice provides a substantial source of
-                        carbohydrates, offering essential energy for daily activities.</li>
-                    <li class="my-3"><b>Minerals and Vitamins:</b> Depending on the type, non-Basmati rice can be a
-                        source of various vitamins and minerals, including B vitamins, iron, and magnesium.</li>
-                    <li class="my-3"><b>Gluten-Free:</b> Most non-Basmati rice varieties are naturally gluten-free,
-                        making them a suitable option for those with gluten sensitivities or celiac disease.</li>
+                    <li class="my-3"><b>Energy Source:</b> Ponni rice provides a good source of carbohydrates, offering sustained energy for daily activities.</li>
+                    <li class="my-3"><b>Nutrient-Rich:</b> It contains essential vitamins and minerals, including B vitamins, iron, and magnesium, contributing to a balanced diet.</li>
+                    <li class="my-3"><b>Digestive Health:</b> The fiber content in Ponni rice can aid in digestion and promote a healthy digestive system.</li>
                 </ul>
                 <a href="" class="btn btn-dark w-100 mt-3">Send Enquiry</a>
             </div>
             <div class="col-lg-6 my-3">
                 <h3 class="text-warning">Characteristics:</h3>
-                <p>Non-Basmati rice refers to a variety of rice types that differ from the aromatic and long-grain
-                    Basmati rice. These varieties come in various shapes, sizes, and textures, making them suitable for
-                    a wide range of culinary applications. Whether you need short-grain, medium-grain, or long-grain
-                    rice, non-Basmati varieties offer unique qualities and benefits for diverse cooking needs.</p>
+                <p>Ponni rice is a premium variety of rice that is highly valued for its unique texture, flavor, and nutritional benefits. Originating from the fertile regions of South India, Ponni rice is renowned for its adaptability in diverse culinary applications and its ability to complement a wide range of dishes.</p>
                 <hr>
                 <h4>Why Choose Our Non-Basmati Rice?</h4>
                 <ul>
-                    <li class="mt-2"><b> Variety:</b> We offer a broad range of non-Basmati rice types to suit various cooking styles and preferences.</li>
-                    <li class="mt-2"><b>Quality Assurance:</b> Our rigorous quality control processes ensure that every batch of rice is fresh, nutritious, and free from contaminants.</li>
-                    <li class="mt-2"><b>Customer Satisfaction:</b> We are committed to providing exceptional products that enhance your culinary creations and deliver consistent quality and flavor.</li>
+                    <li class="mt-2"><b>Appearance:</b> Ponni rice is medium-grain rice with a slender, slightly oval shape. It is known for its firm, non-sticky texture when cooked, making it an excellent choice for various dishes.</li>
+                    <li class="mt-2"><b>Texture:</b> When cooked, Ponni rice grains remain separate and fluffy, with a pleasant bite that enhances the overall eating experience. Its non-sticky quality ensures that the grains do not clump together, making it ideal for dishes where distinct rice grains are desired.</li>
+                    <li class="mt-2"><b>Flavor:</b> Ponni rice has a mild, neutral flavor that complements a wide array of ingredients and seasonings, making it a versatile choice for everyday meals and special occasions.</li>
                 </ul>
             </div>
         </div>
