--- a/red-round-chilly.html
+++ b/red-round-chilly.html
@@ -40,12 +40,13 @@
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
                     <a href="about.html" class="nav-item nav-link ">About</a>
-
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
-                            <a href="rice.html" class="dropdown-item">Rice</a>
+                            <a href="basmati.html" class="dropdown-item">Basmati Rice</a>
+                            <a href="non-basmati.html" class="dropdown-item">Non Basmati Rice</a>
+                            <a href="ponni.html" class="dropdown-item">Ponni Rice</a>
                             <a href="urad.html" class="dropdown-item">Urad dal Black</a>
                         </div>
                     </div>
