--- a/urad.html
+++ b/urad.html
@@ -59,14 +59,10 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a href="red-round-chilly.html" class="dropdown-item">Red Round Chilly</a>
-                            <a href="rice.html" class="dropdown-item " id="hov"> Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Non Basmati Rice </a>
-                            <a href="rice.html" class="dropdown-item " id="hov">Ponni Rice</a>
+                            <a href="basmati.html" class="dropdown-item">Basmati Rice</a>
+                            <a href="non-basmati.html" class="dropdown-item">Non Basmati Rice</a>
+                            <a href="ponni.html" class="dropdown-item">Ponni Rice</a>
                             <a href="urad.html" class="dropdown-item">Urad dal Black</a>
-                            <a href="urad.html" class="dropdown-item">Dal Chana</a>
-                            <a href="urad.html" class="dropdown-item">Moth Dal</a>
-                            <a href="urad.html" class="dropdown-item">Urad Dal</a>
-                            <a href="urad.html" class="dropdown-item">Moong Dal</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -84,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-capitalize">
-                    <h2>Chana Dal</h2>
+                    <h2>Urad  Dal</h2>
                 </div>
             </div>
         </div>
@@ -95,28 +91,42 @@
     <div class="container">
         <div class="row text-capitalize">
             <div class="col-lg-6 my-3">
-                <img src="image/non basmati.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
-                <h3 class="mt-3  text-warning">Nutritional Benefits: </h3>
-                <ul class=" ">
-                    <li class="my-3"><b>High in Protein:</b> Chana Dal is an excellent source of plant-based protein, making it a valuable addition to vegetarian and vegan diets.</li>
-                    <li class="my-3"><b>Rich in Fiber:</b> It is high in dietary fiber, which supports healthy digestion and can help in maintaining stable blood sugar levels.</li>
-                    <li class="my-3"><b>Vitamins and Minerals:</b> Chana Dal provides essential nutrients, including iron, magnesium, folate, and B vitamins, contributing to overall health and well-being.</li>
-                </ul>
-                <a href="" class="btn btn-dark w-100 mt-3">Send Enquiry</a>
+                <img src="image/udat1.jpg" class="border border-3 border-dark" height="auto" width="100%" alt="">
+                
+                <a href="" class="btn btn-dark w-100 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Send Enquiry</a>
             </div>
             <div class="col-lg-6 my-3">
                 <h3 class="text-warning">Characteristics:</h3>
-                <p>Chana Dal, also known as split chickpeas, is a nutritious and versatile legume that is a staple in many South Asian cuisines. Derived from chickpeas that have been peeled and split, Chana Dal offers a rich, nutty flavor and a hearty texture that enhances a wide range of dishes.</p>
+                <p>Urad dal, also known as black gram, is not just a staple in South Asian cuisine but also a
+                    nutritional powerhouse with numerous health benefits. Whether you’re looking to enhance your diet or
+                    discover new culinary delights, incorporating urad dal can be a great choice. Here’s why:</p>
                 <hr>
                 <h4>Culinary Uses:</h4>
                 <ul>
-                    <li class="mt-2"><b>Traditional Dishes:</b> Chana Dal is commonly used in South Asian dishes such as dal fry, dal tadka, and chana dal curry. It can also be used as a base for soups and stews.</li>
-                    <li class="mt-2"><b>Snacks and Sides:</b> It is often used in the preparation of savory snacks like chana dal chivda and as a key ingredient in various traditional fritters and snacks.</li>
-                    <li class="mt-2"><b>Salads and Samosas: </b>Cooked Chana Dal can be added to salads for extra protein and texture or used as a filling for samosas and other savory pastries.</li>
+                    <li class="mt-2"><b>Rich in Protein:</b> Urad dal is a fantastic source of plant-based protein,
+                        making it an excellent option for vegetarians and vegans. Protein is essential for muscle
+                        repair, immune function, and overall health, and urad dal provides a significant amount of this
+                        crucial nutrient.</li>
+                    <li class="mt-2"><b>High in Dietary Fiber:</b> Packed with dietary fiber, urad dal supports
+                        digestive health and promotes regular bowel movements. A fiber-rich diet can help prevent
+                        constipation, maintain healthy cholesterol levels, and keep you feeling full longer, which aids
+                        in weight management.</li>
+                    <li class="mt-2"><b>Abundant in Essential Nutrients: </b>Urad dal is loaded with essential vitamins
+                        and minerals such as iron, magnesium, potassium, and folate. These nutrients play vital roles in
+                        energy production, bone health, and the formation of red blood cells.</li>
+                </ul>
+            </div>
+            <div class="col-12">
+                <h3 class="mt-3  text-warning">How to Enjoy Urad Dal: </h3>
+                <ul class=" ">
+                    <li class="my-3">Cooked as a Dal: Prepare a hearty, flavorful lentil stew.</li>
+                    <li class="my-3">In Batters: Use it in batters for dosas and idlis.</li>
+                    <li class="my-3">Sprouted: Add it to salads for an extra crunch and nutritional boost.</li>
                 </ul>
             </div>
         </div>
     </div>
+
 
 
 
